# zotero-desktop-mcp

./: .gitignore  README.md  pyproject.toml
src/zotero_desktop_mcp/: server.py
