[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-desktop-mcp"
version = "0.1.0"
description = "MCP server for Zotero desktop app via local API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
zotero-desktop-mcp = "zotero_desktop_mcp.server:main"
